Updated enums
