# src/BeautifyBaltics.Core.API/Application/Users/Queries/GetUser/GetUserResponse.cs
@@ -1,3 +1,5 @@
+using BeautifyBaltics.Domain.Enumerations;
+
 namespace BeautifyBaltics.Core.API.Application.Users.Queries.UserProfile;
 
-public record GetUserResponse(string Role, string Email, string? FullName);
+public record GetUserResponse(UserRole Role, string Email, string? FullName);
